--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -1,50 +1,54 @@
-// Tools
-@import "tools/variables";
-@import "tools/functions";
-@import "tools/mixins";
-@import "tools/site-settings";
-@import "tools/media-queries";
-@import "tools/utility-classes";
-@import "tools/family";
+// 01 - Utils
+// ---------------------
+@import "01-utils/variables";
+@import "01-utils/functions";
+@import "01-utils/mixins";
+@import "01-utils/site-settings";
+@import "01-utils/media-queries";
+@import "01-utils/utility-classes";
+@import "01-utils/family";
 
-// Base
-@import "base/sanitize";
-@import "base/typography/modular-scale";
-@import "base/typography/responsive-modular-scale";
-@import "base/base";
+// 02 - Base
+// ---------------------
+@import "02-base/sanitize";
+@import "02-base/typography/modular-scale";
+@import "02-base/typography/responsive-modular-scale";
+@import "02-base/base";
 
-// Vendors
-// @import "vendors/animate";
+// 03 - Vendors
+// ---------------------
+// @import "03-vendors/animate";
 
-// Fonts
-@import "fonts/fonts";
+// 04 - Fonts
+// ---------------------
+@import "04-fonts/fonts";
 
-// Components
-// @import "components/text-wrapper";
-@import "components/btn";
-@import "components/icons";
-@import "components/media";
-// @import "components/dropdown";
-@import "components/navigation";
-// @import "components/tooltip";
-// @import "components/blockquotes";
-@import "components/links";
-@import "components/list-pros";
-@import "components/price-table-list";
-@import "components/tag";
-@import "components/o-social-links";
-// @import "components/store-links";
-@import "components/logo";
-// @import "components/card";
-@import "components/inputs";
-// @import "components/table";
-// @import "components/searchbar";
-// @import "components/scroll-indicator";
+// 05 - Components
+// ---------------------
+@import "05-components/c-logo";
+@import "05-components/c-button";
+@import "05-components/c-icon";
+@import "05-components/c-text";
+@import "05-components/c-separator";
+@import "05-components/c-list";
+@import "05-components/c-card";
+@import "05-components/c-vertical-slider";
+// @import "05-components/media";
+// @import "05-components/text-wrapper";
+// @import "05-components/dropdown";
+// @import "05-components/navigation";
+// @import "05-components/tooltip";
+// @import "05-components/blockquotes";
+// @import "05-components/links";
+// @import "05-components/list-pros";
+// @import "05-components/price-table-list";
+// @import "05-components/tag";
+// @import "05-components/o-social-links";
+// @import "05-components/store-links";
+// @import "05-components/inputs";
+// @import "05-components/table";
+// @import "05-components/searchbar";
+// @import "05-components/scroll-indicator";
 
-// Layout
-@import "layouts/content-sections";
-@import "layouts/header";
-@import "layouts/hero-sections";
-@import "layouts/media-wrappers";
-@import "layouts/footer";
-@import "layouts/forms";
+// 06 - Pages
+// ---------------------
