--- a/app/assets/scss/tools/_utility-classes.scss
+++ b/app/assets/scss/tools/_utility-classes.scss
@@ -110,3 +110,16 @@
   bottom: 0;
   left: 0;
 }
+
+// Visually hide content, leaving it accessible to screenreaders and ATs.
+// http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+.u-visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  border: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0 0 0 0) !important;
+}
