--- a/app/assets/scss/02-base/_base.scss
+++ b/app/assets/scss/02-base/_base.scss
@@ -134,9 +134,11 @@ button {
   cursor: pointer;
 }
 
-// button {
-//   cursor: pointer;
-// }
+// Use CSS attribute selectors to display links
+// when <a> has no text value but the `href` has a link.
+a[href^="http"]:empty::before {
+  content: attr(href);
+}
 
 ::selection {
   background: var(--color-primary);
