--- a/app/assets/scss/05-components/_inputs.scss
+++ b/app/assets/scss/05-components/_inputs.scss
@@ -38,6 +38,8 @@ select {
   }
   :-moz-placeholder { /* Firefox 18- */
     color: var(--color-grey-30);
+    // https://css-tricks.com/almanac/selectors/p/placeholder/#firefox-placeholder-color
+    opacity: 1;
   }
 
   &.touched:required:valid {
