--- a/app/assets/scss/01-utils/_media-queries.scss
+++ b/app/assets/scss/01-utils/_media-queries.scss
@@ -1,5 +1,6 @@
-@charset "UTF-8"; // Fixes an issue where Ruby locale is not set properly
-                  // See https://github.com/sass-mq/sass-mq/pull/10
+@charset "UTF-8";
+// Fixes an issue where Ruby locale is not set properly
+// See https://github.com/sass-mq/sass-mq/pull/10
 
 /// Base font size on the `<body>` element
 /// @type Number (unit)
@@ -31,12 +32,7 @@ $mq-responsive: true !default;
 ///
 /// @type Map
 /// @link https://github.com/sass-mq/sass-mq#seeing-the-currently-active-breakpoint Full documentation and examples
-$mq-breakpoints: (
-    mobile:  320px,
-    tablet:  740px,
-    desktop: 980px,
-    wide:    1300px
-) !default;
+$mq-breakpoints: (mobile: 320px, tablet: 740px, desktop: 980px, wide: 1300px) !default;
 
 /// Static breakpoint (for fixed-width layouts)
 ///
@@ -86,13 +82,14 @@ $mq-media-type: all !default;
 /// @requires $mq-base-font-size
 /// @returns {Number}
 @function mq-px2em($px, $base-font-size: $mq-base-font-size) {
-    @if unitless($px) {
-        @warn "Assuming #{$px} to be in pixels, attempting to convert it into pixels.";
-        @return mq-px2em($px + 0px); // That may fail.
-    } @else if unit($px) == em {
-        @return $px;
-    }
-    @return ($px / $base-font-size) * 1em;
+  @if unitless($px) {
+    @warn "Assuming #{$px} to be in pixels, attempting to convert it into pixels.";
+    /* stylelint-disable-next-line */
+    @return mq-px2em($px + 0px); // That may fail. 
+  } @else if unit($px) == em {
+    @return $px;
+  }
+  @return ($px / $base-font-size) * 1em;
 }
 
 /// Get a breakpoint's width
@@ -107,11 +104,11 @@ $mq-media-type: all !default;
 ///
 /// @returns {Number} Value in pixels
 @function mq-get-breakpoint-width($name, $breakpoints: $mq-breakpoints) {
-    @if map-has-key($breakpoints, $name) {
-        @return map-get($breakpoints, $name);
-    } @else {
-        @warn "Breakpoint #{$name} wasn't found in $breakpoints.";
-    }
+  @if map-has-key($breakpoints, $name) {
+    @return map-get($breakpoints, $name);
+  } @else {
+    @warn "Breakpoint #{$name} wasn't found in $breakpoints.";
+  }
 }
 
 /// Media Query mixin
@@ -162,63 +159,71 @@ $mq-media-type: all !default;
 ///    }
 ///  }
 @mixin mq(
-    $from: false,
-    $until: false,
-    $and: false,
-    $media-type: $mq-media-type,
-    $breakpoints: $mq-breakpoints,
-    $responsive: $mq-responsive,
-    $static-breakpoint: $mq-static-breakpoint
+  $from: false,
+  $until: false,
+  $and: false,
+  $media-type: $mq-media-type,
+  $breakpoints: $mq-breakpoints,
+  $responsive: $mq-responsive,
+  $static-breakpoint: $mq-static-breakpoint
 ) {
-    $min-width: 0;
-    $max-width: 0;
-    $media-query: '';
+  $min-width: 0;
+  $max-width: 0;
+  $media-query: "";
 
-    // From: this breakpoint (inclusive)
-    @if $from {
-        @if type-of($from) == number {
-            $min-width: mq-px2em($from);
-        } @else {
-            $min-width: mq-px2em(mq-get-breakpoint-width($from, $breakpoints));
-        }
+  // From: this breakpoint (inclusive)
+  @if $from {
+    @if type-of($from) == number {
+      $min-width: mq-px2em($from);
+    } @else {
+      $min-width: mq-px2em(mq-get-breakpoint-width($from, $breakpoints));
+    }
+  }
+
+  // Until: that breakpoint (exclusive)
+  @if $until {
+    @if type-of($until) == number {
+      $max-width: mq-px2em($until);
+    } @else {
+      $max-width: mq-px2em(mq-get-breakpoint-width($until, $breakpoints)) - 0.01em;
+    }
+  }
+
+  // Responsive support is disabled, rasterize the output outside @media blocks
+  // The browser will rely on the cascade itself.
+  @if $responsive == false {
+    $static-breakpoint-width: mq-get-breakpoint-width(
+      $static-breakpoint,
+      $breakpoints
+    );
+    $target-width: mq-px2em($static-breakpoint-width);
+    // Output only rules that start at or span our target width
+    @if ($and == false and ($min-width <= $target-width) and (($until == false) or ($max-width >= $target-width))) {
+      @content;
+    }
+  }
+
+  // Responsive support is enabled, output rules inside @media queries
+  @else {
+    @if $min-width != 0 {
+      $media-query: "#{$media-query} and (min-width: #{$min-width})";
+    }
+    @if $max-width != 0 {
+      $media-query: "#{$media-query} and (max-width: #{$max-width})";
+    }
+    @if $and {
+      $media-query: "#{$media-query} and #{$and}";
     }
 
-    // Until: that breakpoint (exclusive)
-    @if $until {
-        @if type-of($until) == number {
-            $max-width: mq-px2em($until);
-        } @else {
-            $max-width: mq-px2em(mq-get-breakpoint-width($until, $breakpoints)) - .01em;
-        }
+    // Remove unnecessary media query prefix 'all and '
+    @if ($media-type == "all" and $media-query != "") {
+      $media-type: "";
+      $media-query: str-slice(unquote($media-query), 6);
     }
-
-    // Responsive support is disabled, rasterize the output outside @media blocks
-    // The browser will rely on the cascade itself.
-    @if $responsive == false {
-        $static-breakpoint-width: mq-get-breakpoint-width($static-breakpoint, $breakpoints);
-        $target-width: mq-px2em($static-breakpoint-width);
-        // Output only rules that start at or span our target width
-        @if ($and == false and ($min-width <= $target-width) and (($until == false) or ($max-width >= $target-width))) {
-            @content;
-        }
+    @media #{$media-type + $media-query} {
+      @content;
     }
-
-    // Responsive support is enabled, output rules inside @media queries
-    @else {
-        @if $min-width != 0 { $media-query: '#{$media-query} and (min-width: #{$min-width})'; }
-        @if $max-width != 0 { $media-query: '#{$media-query} and (max-width: #{$max-width})'; }
-        @if $and            { $media-query: '#{$media-query} and #{$and}'; }
-
-        // Remove unnecessary media query prefix 'all and '
-        @if ($media-type == 'all' and $media-query != '') {
-            $media-type: '';
-            $media-query: str-slice(unquote($media-query), 6);
-        }
-
-        @media #{$media-type + $media-query} {
-            @content;
-        }
-    }
+  }
 }
 
 /// Add a breakpoint
@@ -232,8 +237,8 @@ $mq-media-type: all !default;
 ///  @include mq-add-breakpoint(tvscreen, 1920px);
 ///  @include mq(tvscreen) {}
 @mixin mq-add-breakpoint($name, $width) {
-    $new-breakpoint: ($name: $width);
-    $mq-breakpoints: map-merge($mq-breakpoints, $new-breakpoint) !global;
+  $new-breakpoint: ($name: $width);
+  $mq-breakpoints: map-merge($mq-breakpoints, $new-breakpoint) !global;
 }
 
 /// Show the active breakpoint in the top right corner of the viewport
@@ -252,29 +257,28 @@ $mq-media-type: all !default;
 ///  // Show breakpoints using custom settings
 ///  @include mq-show-breakpoints((L, XL), (S: 300px, L: 800px, XL: 1200px));
 @mixin mq-show-breakpoints($show-breakpoints: $mq-show-breakpoints, $breakpoints: $mq-breakpoints) {
-    body::before {
-        background-color: #FCF8E3;
-        border-bottom: 1px solid #FBEED5;
-        border-left: 1px solid #FBEED5;
-        color: #C09853;
-        font: small-caption;
-        padding: 3px 6px;
-        pointer-events: none;
-        position: fixed;
-        right: 0;
-        top: 0;
-        z-index: 100;
+  body::before {
+    background-color: #FCF8E3;
+    border-bottom: 1px solid #FBEED5;
+    border-left: 1px solid #FBEED5;
+    color: #C09853;
+    font: inherit;
+    padding: 3px 6px;
+    pointer-events: none;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 100;
 
-        // Loop through the breakpoints that should be shown
-        @each $show-breakpoint in $show-breakpoints {
-            $width: mq-get-breakpoint-width($show-breakpoint, $breakpoints);
-            @include mq($show-breakpoint, $breakpoints: $breakpoints) {
-                content: "#{$show-breakpoint} ≥ #{$width} (#{mq-px2em($width)})";
-            }
-        }
+    // Loop through the breakpoints that should be shown
+    @each $show-breakpoint in $show-breakpoints {
+      $width: mq-get-breakpoint-width($show-breakpoint, $breakpoints);
+      @include mq($show-breakpoint, $breakpoints: $breakpoints) {
+        content: "#{$show-breakpoint} ≥ #{$width} (#{mq-px2em($width)})";
+      }
     }
+  }
 }
-
 @if length($mq-show-breakpoints) > 0 {
-    @include mq-show-breakpoints;
+  @include mq-show-breakpoints;
 }
