--- a/app/assets/scss/01-utils/_mixins.scss
+++ b/app/assets/scss/01-utils/_mixins.scss
@@ -23,6 +23,7 @@
 ///   &:-ms-input-placeholder {
 ///     color: blue;
 ///   }
+/* stylelint-disable */
 @mixin placeholder() {
   &::-webkit-input-placeholder {
     @content;
@@ -34,6 +35,7 @@
     @content;
   }
 }
+/* stylelint-enable */
 
 /// Flexbox vertical Centering (apply this class on the parent element of your targeted children)
 @mixin flex-vertical-center {
@@ -127,13 +129,6 @@
   }
 }
 
-/// Retina Media Query
-@mixin retina {
-  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-    @content;
-  }
-}
-
 /// Subtle Separator
 /// @author Louis Chenais
 ///
@@ -147,7 +142,8 @@
 @mixin subtle-sep( $dir, $width, $color) {
   $gradient: to left;
   position: relative;
-  &:before {
+
+  &::before {
     position: absolute;
     content: "";
     #{$dir}: 0;
@@ -262,6 +258,7 @@
 @mixin reset-link($color) {
   text-decoration: none;
   color: $color;
+
   &:hover {
     color: $color;
   }
@@ -290,9 +287,11 @@
 ///   } 
 @mixin no-outline() {
   outline: none;
+
   &:active {
     outline: none;
   }
+
   &:focus {
     outline: none;
   }
@@ -314,49 +313,17 @@
 /// .class { @include aspect-ratio($ratio: 1.2); } // Keywords 
 @mixin aspect-ratio($ratio-or-width, $height: null) {
   $padding: if($height, percentage($height/$ratio-or-width), percentage(1/$ratio-or-width));
-  &:before {
+
+  &::before {
     content: '';
     float: left;
     padding-bottom: $padding;
   }
-  &:after {
+
+  &::after {
     content: '';
     display: table;
     clear: both;
-  }
-}
-
-/// Mixin displaying a tooltip under its associated input. The before pseudo-element is the tooltip itseld containing the tip and the after is the tooltip arrow pointing towards the input. This mixin must be applied on the tooltip modifier class (tooltip--top, tooltip--right, tooltip--bottom, tooltip--left).
-///
-/// @author Louis Chenais
-///
-/// @access public
-///
-/// @link http://codepen.io/peiche/pen/JaftA
-///
-/// @example scss - Usage
-/// .tooltip--right { @include touch-input-tooltip(); } 
-@mixin touch-input-tooltip {
-  .input-wrapper > input:focus ~ .tooltip-wrapper &:before,
-  .input-wrapper > input:focus ~ .tooltip-wrapper &:after {
-    opacity: 1;
-  }
-  .input-wrapper &:before {
-    @include mq($from: mobile, $until: desktop) {
-      top: 100%;
-      left: 0;
-      margin-left: 0;
-      width: $single-form-width--tablet;
-    }
-  }
-  .input-wrapper &:after {
-    @include mq($from: mobile, $until: desktop) {
-      border-bottom-color: $blue;
-      border-top: none;
-      margin-left: 10px;
-      top: 50%;
-      margin-top: -6px;
-    }
   }
 }
 
@@ -379,8 +346,7 @@
 /// }
 @mixin vector-bg-with-fallback($name) {
   background-image: url('#{$public_path}images/frontend/logos/#{$name}.png');
-  background-image: none,
-  url('#{$public_path}images/frontend/logos/#{$name}.svg');
+  background-image: none, url('#{$public_path}images/frontend/logos/#{$name}.svg');
 }
 
 /// Given the location of a webfont, will generate a font-face declaration with multiple file formats. IE9+ Support :)
@@ -389,6 +355,7 @@
 /// @param {String} $file-name - File name with directory
 /// @example scss - Usage
 ///   @include font-face('gotham', '/fonts/gotham');
+/* stylelint-disable */
 @mixin font-face($font-name, $file-name) {
   @font-face {
     font-family: quote($font-name);
@@ -397,6 +364,7 @@
          url($file-name + '.otf') format('opentype');
   }
 }
+/* stylelint-enable */
 
 /// Background gradient helper
 /// @access public
@@ -417,15 +385,12 @@ $end-color,
 $orientation) {
   background: $start-color;
   @if $orientation=='vertical' {
-    background: -webkit-linear-gradient(top, $start-color, $end-color);
     background: linear-gradient(to bottom, $start-color, $end-color);
   }
   @else if $orientation=='horizontal' {
-    background: -webkit-linear-gradient(left, $start-color, $end-color);
     background: linear-gradient(to right, $start-color, $end-color);
   }
   @else {
-    background: -webkit-radial-gradient(center, ellipse cover, $start-color, $end-color);
     background: radial-gradient(ellipse at center, $start-color, $end-color);
   }
 }
@@ -440,9 +405,8 @@ $orientation) {
   @supports (background-image: linear-gradient(to bottom, currentColor 75%, currentColor 75%)) and (not(text-decoration-skip: ink)) {
     & {
       text-decoration: none;
-      background-image: -webkit-linear-gradient(top, currentColor 75%, currentColor 75%);
       background-image: linear-gradient(to bottom, currentColor 75%, currentColor 75%);
-      text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+      text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
       background-repeat: repeat-x;
       background-size: 1px 1px;
       background-position: 0 97%;
@@ -459,6 +423,7 @@ $orientation) {
 /// @example scss - Usage
 ///   @include fluid-type(320px, 1440px, 14px, 18px);
 /// @link http://madebymike.com.au/writing/precise-control-responsive-typography/
+/* stylelint-disable */
 @function strip-unit($value) {
   @return $value / ($value * 0 + 1);
 }
@@ -467,7 +432,6 @@ $orientation) {
   $u2: unit($max-vw);
   $u3: unit($min-font-size);
   $u4: unit($max-font-size);
-
   @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
     & {
       font-size: $min-font-size;
@@ -480,3 +444,4 @@ $orientation) {
     }
   }
 }
+/* stylelint-enable */
